Chrome blurry images fix

--- a/static/css/ocelot.css
+++ b/static/css/ocelot.css
@@ -70,6 +70,7 @@ body {
   image-rendering: -o-crisp-edges; /* Opera */
   image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
   image-rendering: crisp-edges;
+  image-rendering: pixelated; /* Chrome */
   -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
 }
 
